--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/Ejercicio-final-Angular-II",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -31,7 +32,8 @@
             ],
             "styles": [
               "src/styles.scss"
-            ]
+            ],
+            "baseHref": "/Ejercicio-final-Angular-II/"
           },
           "configurations": {
             "production": {
@@ -100,6 +102,9 @@
               "src/**/*.html"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
@@ -110,3 +115,4 @@
     ]
   }
 }
+
